examples/datalog/14_aggregations/26_first_last.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_first_last
Knowledge graph 'test_first_last' created.
Switched to knowledge graph: test_first_last
> .kg use test_first_last
Switched to knowledge graph: test_first_last
> +events[(1, "start"), (2, "process"), (3, "validate"), (4, "complete")].
Inserted 4 fact(s) into 'events'.
> +first_id(<MIN:Id>) :- events(Id, _).
Script error: Parse error: Invalid term: '<MIN:Id>'
